--- a/www/resource/css/style.css
+++ b/www/resource/css/style.css
@@ -1,1 +1,87 @@
 /* Empty. Add your own CSS if you like */
+.bar-stable {
+    background-color: white !important;
+}
+
+a {
+    color: #f0b4c5;
+    text-decoration: underline;
+}
+
+.ion-navicon {
+    color: #b04868 !important;
+}
+
+.content-register {
+    padding: 5%;
+    background-color: #b04868 !important;
+}
+
+.content-register h1 {
+    color: white;
+    font-size: 5vw;
+}
+
+.content-register form p {
+    color: white;
+}
+
+.text-form {
+    width: 100%;
+    margin-bottom: 3%;
+    padding: 5% !important;
+    border-radius: 5px;
+}
+
+.text-form-select {
+    width: 100%;
+    margin-bottom: 3%;
+    padding: 2% !important;
+    border-radius: 5px;
+}
+
+.neemaa-button-footer {
+    background-color: #5c2542 !important;
+    color: white;
+    width: 80%;
+    font-size: 5vw !important;
+    font-weight: bold;
+    height: 100%;
+}
+
+.bar-footer {
+    background-color: #b04868 !important;
+    text-align: center !important;
+    padding-bottom: 70px !important;
+    padding-top: 0 !important;
+    background-position: 0 -1px;
+}
+
+.content-search {
+    text-align: center;
+    padding: 5%;
+    background-color: #b04868 !important;
+}
+
+.content-search h1 {
+    margin-top: 25%;
+    color: white;
+    font-size: 5vw;
+}
+
+.content-search h2 {
+    margin-bottom: 25%;
+    color: white;
+    font-size: 4vw;
+}
+
+.content-list {
+    text-align: center;
+    background-color: #b04868 !important;
+}
+
+.content-list p {
+    color: white;
+    font-size: 4vw;
+}
+
