--- a/client/www/templates/register.html
+++ b/client/www/templates/register.html
@@ -14,7 +14,7 @@
       <label class="item item-input home-form" data-ng-if="ifNeemStyler()">
         <input type="text" placeholder="Societe" data-ng-model="registerUser.society">
       </label>
-      <ion-checkbox class="home-checkbox white-text" data-ng-click="neemStyler()">Je veux m'inscrire en tant que NeemStyler !</ion-checkbox>
+      <ion-checkbox class="home-checkbox" data-ng-click="neemStyler()">Je veux m'inscrire en tant que NeemStyler !</ion-checkbox>
     </div>
     <div class="white-text">Déja inscrit, cliquer <a ui-sref="app.login">ICI</a></div>
   </ion-content>
