--- a/client/www/css/style.css
+++ b/client/www/css/style.css
@@ -45,8 +45,8 @@ a {
   padding: 15px;
 }
 
-.white-text {
-  color: white !important;
+span{
+  color: #FFEEED;
 }
 
 .footer-button {
@@ -207,5 +207,3 @@ a {
   font-size: 5vw;
   font-family: Philosopher sans-serif;
 }
-
-
