flic button click span and chargement profil user

--- a/client/www/css/style.css
+++ b/client/www/css/style.css
@@ -211,3 +211,11 @@ a {
 span{
   color: #FFEEED;
 }
+
+.chargUser {
+  background-color: #B55370;
+  position: absolute;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: 99;
+}
