--- a/client/www/templates/login.html
+++ b/client/www/templates/login.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Neemaa">
   <ion-content class="content-app">
-    <h4 class="white-text">Se connecter</h4>
+    <h4 class="white-text padding-login"><i class="ion-log-in"></i> Se connecter</h4>
     <div class="list">
       <label class="item item-input home-form">
         <input type="email" placeholder="Email" data-ng-model="loginUser.email">
@@ -8,8 +8,8 @@
       <label class="item item-input home-form">
         <input type="password" placeholder="Mot de passe" data-ng-model="loginUser.password">
       </label>
-      <div class="white-text">Mot de passe oublié ? <a ui-sref="app.recovery">ICI</a></div>
-      <div class="white-text">Pas encore inscrit ? <a ui-sref="app.register">ICI</a></div>
+      <div class="white-text padding-login">Mot de passe oublié ? <a ui-sref="app.recovery">ICI</a></div>
+      <div class="white-text padding-login">Pas encore inscrit ? <a ui-sref="app.register">ICI</a></div>
     </div>
 
   </ion-content>
