--- a/client/www/templates/recovery_password.html
+++ b/client/www/templates/recovery_password.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Neemaa">
   <ion-content class="content-app">
-    <h4 class="white-text">Entrer votre Email:</h4>
+    <h4 class="white-text padding-login"><i class="ion-email"></i> Entrer votre Email:</h4>
     <div class="list">
       <label class="item item-input home-form">
         <input type="email" placeholder="Email" data-ng-model="recoverPassword.email">
