--- a/client/www/templates/menu.html
+++ b/client/www/templates/menu.html
@@ -16,25 +16,25 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ui-sref="app.login" data-ng-if="ifAuth()">
-          <i class="ion-log-in"></i> Login
+          <i class="ion-log-in"></i> Se Connecter
         </ion-item>
         <ion-item menu-close ui-sref="app.register" data-ng-if="ifAuth()">
-          <i class="ion-edit"></i> Register
+          <i class="ion-edit"></i> Inscription
         </ion-item>
         <ion-item menu-close ui-sref="app.search" data-ng-if="!ifAuth()">
-          <i class="icon ion-search"></i> Search
+          <i class="icon ion-search"></i> Rechercher
         </ion-item>
         <ion-item menu-close ui-sref="app.profil" data-ng-if="ifUser()">
-          <i class="icon ion-person"></i> Profil
+          <i class="icon ion-person"></i> Profile
         </ion-item>
         <ion-item menu-close ui-sref="app.profilNeemStyler" data-ng-if="ifNeemStyler()">
-          <i class="icon ion-person"></i> Profil
+          <i class="icon ion-person"></i> Profile
         </ion-item>
         <ion-item menu-close ui-sref="app.calendarNeemStyler" data-ng-if="ifNeemStyler()">
           <i class="ion-calendar"></i> Agenda
         </ion-item>
         <ion-item menu-close data-ng-if="ifUser()||ifAdmin()||ifNeemStyler()" data-ng-click="logout()">
-          <i class="ion-log-out"></i> Logout
+          <i class="ion-log-out"></i> Déconnecter
         </ion-item>
       </ion-list>
     </ion-content>
