--- a/client/www/templates/profil.html
+++ b/client/www/templates/profil.html
@@ -2,7 +2,7 @@
   <ion-content class="content-app">
     <div class="chargUser" data-ng-if="showLoadingPanelUser()">
       <div class="row" layout-align="center center">
-        <span style="color: black">TEST</span>
+        <img id="chargement" src="img/chargement.gif">
       </div>
     </div>
     <div class="list">
