--- a/client/www/templates/profil-neemstyler.html
+++ b/client/www/templates/profil-neemstyler.html
@@ -1,9 +1,6 @@
 <ion-view view-title="Neemaa">
-  <ion-content data-ng-if="0">
 
-  </ion-content>
-
-  <ion-content data-ng-if="1" class="content-profil-neemstyler">
+  <ion-content class="content-profil-neemstyler">
     <div class="row">
       <div class="col col-33">
         <img src="{{ neemstylerProfilPicture }}" style="width: 100%;" />
