--- a/client/www/css/style.css
+++ b/client/www/css/style.css
@@ -181,8 +181,7 @@ a {
 /* Search CSS */
 .search-select-form {
   width: 100%;
-  padding: 4%;
-  background-color: white;
+  padding: 2%;
 }
 
 /* LIST NEEM CSS */
@@ -228,4 +227,19 @@ a {
   margin-left: auto;
   margin-right: auto;
   margin-top: 50%;
+}
+
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px) {
+  .profil-user-form-text{
+    height: 23px !important;
+  }
+  .bar-footer{
+    margin-bottom: -10px;
+  }
+}
+
+span{
+  color: #FFEEED;
 }
