--- a/client/www/templates/profil.html
+++ b/client/www/templates/profil.html
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="col">
           <div class="row">
-            <div class="col text-center">
+             <div class="col text-center">
               <img src="{{ userProfilePicture }}" style="width: 100%; border-radius: 50%">
               <a ngf-select="uploadProfilePictureUser($file)">Editer</a>
             </div>
@@ -122,11 +122,11 @@
         </div>
       </div>
 
-      <!-- <div class="row">
+      <div class="row">
         <div class="col">
           <ion-checkbox class="home-checkbox" data-ng-model="updateProfilUserN.neemstyler">Devenir NeemStyler</ion-checkbox>
         </div>
-      </div> -->
+      </div>
     </div>
 
   </ion-content>
