--- a/client/www/templates/profil.html
+++ b/client/www/templates/profil.html
@@ -79,7 +79,7 @@
 
       <div class="row">
         <div class="col">
-          <select data-ng-model="updateProfilUserN.carnation_color" id="profil-select-color" class="search-select-form">
+          <select data-ng-model="updateProfilUserN.carnation_color" id="profil-select-color" class="search-select-form color{{ updateProfilUserN.carnation_color }}">
             <option value="" disabled selected>Carnation</option>
             <option class="color1" value="1"></option>
             <option class="color2" value="2"></option>
@@ -94,7 +94,6 @@
           </select>
         </div>
       </div>
-
       <div class="row">
         <div class="col">
           <select data-ng-model="updateProfilUserN.hair_type" class="search-select-form">
