--- a/client/www/templates/list-neemstyler.html
+++ b/client/www/templates/list-neemstyler.html
@@ -7,22 +7,23 @@
         <div class="row" data-ng-click="neemStylerSelected(list.society)">
           <div class="col text-left">
             <div class="row">
-              <span class="list-name-item">{{list.society}}</span>
+              <span class="list-name-item pad size-list-neem">{{list.society}}</span>
+            </div>
+            <div class="row white-text pad">
+              <span class="pad size-list-neem">Service: N/A</span>
             </div>
             <div class="row white-text">
-              Service: N/A
-            </div>
-            <div class="row white-text">
-              <i class="ion ion-star"></i> 25 avis
+              <span class="size-list-neem"><i class="ion ion-star"></i><i class="ion ion-star"></i><i class="ion ion-star"></i><i class="ion ion-star"></i><i class="ion ion-star"></i> 25 avis</span>
             </div>
           </div>
-          <div class="col white-text text-right">
+          <div class="col white-text text-right" id="fleche">
             >
           </div>
         </div>
       </ion-item>
     </ion-list>
   </ion-content>
+  <div class="bar bar-footer bar-footer-list-neemstyler">
 
-
+  </div>
 </ion-view>
