--- a/client/www/templates/profil.html
+++ b/client/www/templates/profil.html
@@ -81,16 +81,16 @@
         <div class="col">
           <select data-ng-model="updateProfilUserN.carnation_color" id="profil-select-color" class="search-select-form color{{ updateProfilUserN.carnation_color }}">
             <option value="" disabled selected>Carnation</option>
-            <option class="color1 search-select-form" value="1"></option>
-            <option class="color2 search-select-form" value="2"></option>
-            <option class="color3 search-select-form" value="3"></option>
-            <option class="color4 search-select-form" value="4"></option>
-            <option class="color5 search-select-form" value="5"></option>
-            <option class="color6 search-select-form" value="6"></option>
-            <option class="color7 search-select-form" value="7"></option>
-            <option class="color8 search-select-form" value="8"></option>
-            <option class="color9 search-select-form" value="9"></option>
-            <option class="color10 search-select-form" value="10"></option>
+            <option class="color1 search-select-form" value="1">Carnation</option>
+            <option class="color2 search-select-form" value="2">Carnation</option>
+            <option class="color3 search-select-form" value="3">Carnation</option>
+            <option class="color4 search-select-form" value="4">Carnation</option>
+            <option class="color5 search-select-form" value="5">Carnation</option>
+            <option class="color6 search-select-form" value="6">Carnation</option>
+            <option class="color7 search-select-form" value="7">Carnation</option>
+            <option class="color8 search-select-form" value="8">Carnation</option>
+            <option class="color9 search-select-form" value="9">Carnation</option>
+            <option class="color10 search-select-form" value="10">Carnation</option>
           </select>
         </div>
       </div>
